Previous Work/lab07-smart-pointers-cdtinen/questions.txt
Lab 10 - Questions
Authors: <Your Name>

Whenever you make changes to this file, issue the following git commands
(keeping in mind that the '$' character is not to be typed as it is the command
line prompt):

$ git add questions.txt
$ git commit -m "CSC232-LAB10 - appropriate message as instructed"
$ git push

When answering your questions, make sure the lines are no longer than this ---->

--------------------------------------------------------------------------------
Part 1: The following questions are related to changes made to lab10a.cpp
--------------------------------------------------------------------------------

1. What is the compiler message when assigning a unique_ptr to another variable?
	
lab07a.cpp:60:10: error: conflicting declaration 'auto ptrB'
     auto ptrB = move(ptrA);
          ^~~~
lab07a.cpp:58:10: note: previous declaration as 'std::unique_ptr<Song> ptrB'
     auto ptrB = ptrA;

2. What happened when you ran the program after making the changes in Part 1,
   Step 4? Speculate on why you are seeing what you see in the output.
   
   The output was the "Diana Krall" repeated twice, followed by a segmentation fault. Pointer A was used by the move function when pointer B was delcared, and calling pointer A again resulted in the fault.

3. How come [Michael Jackson, Beat It] only appears once in the output?

	The SongFactory was called on the pointer to [Michael Jackson, Beat It], which made it unique, and caused only one print.
	
4. What is the compiler message when passing a unique_ptr by value in the for
   loop?
   
   lab07a.cpp: In function 'void songVector()':
lab07a.cpp:121:28: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = Song; _Dp = std::default_delete<Song>]'
     for (const auto song : songs) {
                            ^~~~~
In file included from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\memory:81:0,
                 from lab07a.cpp:12:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\bits\unique_ptr.h:359:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^~~~~~~~~~


-------------------------------------------------------------------------------
Part 2: The following questions are related to changes made to lab10b.cpp
-------------------------------------------------------------------------------

1. What is the output of your program after carrying out Part 2, Step 2b?

The Beatles, Im Happy Just to Dance With You
Lady Gaga, Just Dance
Elton John, I'm Still Standing
Lady Gaga, Just Dance

2. Did the program compile after you completed Part 2, Step 3b? If so, what
   happened when you executed the program? Explain the output.
   
   The program did compile. The output printed "Lady Gaga, Just Dance" twice, and then printed a segmentation fault. The third line uses the pointer sp7, which is empty as a null pointer. 
   This caused a segmentation fault when getArtist was called using sp7. 